--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -22,7 +22,7 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>1131</width>
+      <width>1161</width>
       <height>541</height>
      </rect>
     </property>
@@ -204,7 +204,7 @@ background-color: rgb(255, 255, 255);</string>
        <string>Ajouter </string>
       </property>
      </widget>
-     <widget class="QPushButton" name="pushButton_2">
+     <widget class="QPushButton" name="modifier">
       <property name="geometry">
        <rect>
         <x>310</x>
@@ -217,7 +217,7 @@ background-color: rgb(255, 255, 255);</string>
        <string>Modifier</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="pushButton_10">
+     <widget class="QPushButton" name="quitter">
       <property name="geometry">
        <rect>
         <x>310</x>
@@ -318,7 +318,7 @@ background-color: rgb(255, 255, 255);</string>
      <widget class="QGroupBox" name="groupBox_11">
       <property name="geometry">
        <rect>
-        <x>790</x>
+        <x>800</x>
         <y>30</y>
         <width>291</width>
         <height>101</height>
@@ -354,8 +354,8 @@ background-color: rgb(255, 255, 255);</string>
      <widget class="QPushButton" name="pushButton_13">
       <property name="geometry">
        <rect>
-        <x>960</x>
-        <y>150</y>
+        <x>980</x>
+        <y>140</y>
         <width>101</width>
         <height>31</height>
        </rect>
