--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -269,8 +269,8 @@ background-color: rgb(255, 255, 255);</string>
      <widget class="QPushButton" name="supprimer">
       <property name="geometry">
        <rect>
-        <x>40</x>
-        <y>460</y>
+        <x>50</x>
+        <y>470</y>
         <width>101</width>
         <height>31</height>
        </rect>
@@ -450,6 +450,52 @@ background-color: rgb(255, 255, 255);</string>
       </property>
       <property name="text">
        <string>Valider</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton">
+      <property name="geometry">
+       <rect>
+        <x>1152</x>
+        <y>20</y>
+        <width>101</width>
+        <height>91</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset>
+        <normaloff>../logo.png</normaloff>../logo.png</iconset>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>100</width>
+        <height>100</height>
+       </size>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_2">
+      <property name="geometry">
+       <rect>
+        <x>150</x>
+        <y>470</y>
+        <width>21</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="icon">
+       <iconset>
+        <normaloff>../1345823.png</normaloff>../1345823.png</iconset>
+      </property>
+      <property name="iconSize">
+       <size>
+        <width>20</width>
+        <height>20</height>
+       </size>
       </property>
      </widget>
     </widget>
