test des controle de saisie

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -17,10 +17,10 @@
    <widget class="QTabWidget" name="tabWidget">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>10</y>
-      <width>1371</width>
-      <height>981</height>
+      <x>60</x>
+      <y>0</y>
+      <width>1511</width>
+      <height>761</height>
      </rect>
     </property>
     <property name="currentIndex">
@@ -34,7 +34,7 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>0</y>
+        <y>10</y>
         <width>401</width>
         <height>371</height>
        </rect>
@@ -256,7 +256,7 @@
      <widget class="QPushButton" name="supprimer">
       <property name="geometry">
        <rect>
-        <x>430</x>
+        <x>420</x>
         <y>410</y>
         <width>93</width>
         <height>28</height>
@@ -269,7 +269,7 @@
      <widget class="QGroupBox" name="groupBox_5">
       <property name="geometry">
        <rect>
-        <x>550</x>
+        <x>520</x>
         <y>0</y>
         <width>791</width>
         <height>641</height>
@@ -434,58 +434,6 @@
      <attribute name="title">
       <string>traduction</string>
      </attribute>
-     <widget class="QGroupBox" name="groupBox_6">
-      <property name="geometry">
-       <rect>
-        <x>20</x>
-        <y>40</y>
-        <width>361</width>
-        <height>161</height>
-       </rect>
-      </property>
-      <property name="title">
-       <string>traduction</string>
-      </property>
-      <widget class="QLabel" name="label_20">
-       <property name="geometry">
-        <rect>
-         <x>40</x>
-         <y>70</y>
-         <width>56</width>
-         <height>16</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>traduire :</string>
-       </property>
-      </widget>
-      <widget class="QRadioButton" name="radioButton_3">
-       <property name="geometry">
-        <rect>
-         <x>130</x>
-         <y>70</y>
-         <width>97</width>
-         <height>20</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>english</string>
-       </property>
-      </widget>
-      <widget class="QRadioButton" name="radioButton_4">
-       <property name="geometry">
-        <rect>
-         <x>130</x>
-         <y>100</y>
-         <width>97</width>
-         <height>20</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>francais</string>
-       </property>
-      </widget>
-     </widget>
     </widget>
     <widget class="QWidget" name="tab_4">
      <attribute name="title">
@@ -502,6 +450,29 @@
       <string>tri</string>
      </attribute>
     </widget>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>1380</x>
+      <y>40</y>
+      <width>161</width>
+      <height>131</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset>
+      <normaloff>../../Downloads/273461698_3005921959674855_5544788743343294134_n.png</normaloff>../../Downloads/273461698_3005921959674855_5544788743343294134_n.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>200</width>
+      <height>200</height>
+     </size>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
