--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -14,11 +14,11 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QTabWidget" name="tabWidget">
+   <widget class="QTabWidget" name="tab2">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>60</y>
+      <y>10</y>
       <width>1261</width>
       <height>521</height>
      </rect>
@@ -40,7 +40,7 @@ background-color: rgb(255, 255, 255);</string>
         <x>10</x>
         <y>20</y>
         <width>441</width>
-        <height>241</height>
+        <height>341</height>
        </rect>
       </property>
       <property name="title">
@@ -180,7 +180,7 @@ background-color: rgb(255, 255, 255);</string>
       <widget class="QLabel" name="label_6">
        <property name="geometry">
         <rect>
-         <x>30</x>
+         <x>40</x>
          <y>180</y>
          <width>81</width>
          <height>16</height>
@@ -200,12 +200,38 @@ background-color: rgb(255, 255, 255);</string>
         </rect>
        </property>
       </widget>
+      <widget class="QLabel" name="le_image">
+       <property name="geometry">
+        <rect>
+         <x>150</x>
+         <y>230</y>
+         <width>141</width>
+         <height>71</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+      <widget class="QLabel" name="le_image_2">
+       <property name="geometry">
+        <rect>
+         <x>50</x>
+         <y>210</y>
+         <width>91</width>
+         <height>71</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>image</string>
+       </property>
+      </widget>
      </widget>
      <widget class="QGroupBox" name="groupBox_8">
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>280</y>
+        <y>370</y>
         <width>441</width>
         <height>91</height>
        </rect>
@@ -249,8 +275,8 @@ background-color: rgb(255, 255, 255);</string>
         </rect>
        </property>
        <property name="styleSheet">
-        <string notr="true">background-color: rgb(85, 255, 255);
-background-color: rgb(255, 85, 0);</string>
+        <string notr="true">
+</string>
        </property>
        <property name="text">
         <string>Supprimer</string>
@@ -272,7 +298,7 @@ background-color: rgb(255, 85, 0);</string>
       <widget class="QLineEdit" name="id_rech">
        <property name="geometry">
         <rect>
-         <x>100</x>
+         <x>120</x>
          <y>30</y>
          <width>81</width>
          <height>22</height>
@@ -282,17 +308,17 @@ background-color: rgb(255, 85, 0);</string>
       <widget class="QLabel" name="label_28">
        <property name="geometry">
         <rect>
-         <x>30</x>
+         <x>10</x>
          <y>30</y>
-         <width>61</width>
-         <height>16</height>
+         <width>101</width>
+         <height>20</height>
         </rect>
        </property>
        <property name="styleSheet">
         <string notr="true"/>
        </property>
        <property name="text">
-        <string>id _maison</string>
+        <string>id _appartement</string>
        </property>
       </widget>
       <widget class="QPushButton" name="pushButton_4">
@@ -427,6 +453,34 @@ background-color: rgb(255, 85, 0);</string>
       </property>
      </widget>
     </widget>
+    <widget class="QWidget" name="tab">
+     <attribute name="title">
+      <string>stat</string>
+     </attribute>
+     <widget class="QCustomPlot" name="widget" native="true">
+      <property name="geometry">
+       <rect>
+        <x>140</x>
+        <y>10</y>
+        <width>801</width>
+        <height>421</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="statistiques">
+      <property name="geometry">
+       <rect>
+        <x>1030</x>
+        <y>380</y>
+        <width>93</width>
+        <height>28</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Statistiques</string>
+      </property>
+     </widget>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -441,6 +495,14 @@ background-color: rgb(255, 85, 0);</string>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QCustomPlot</class>
+   <extends>QWidget</extends>
+   <header>qcustomplot.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
