--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -205,8 +205,8 @@ background-color: rgb(255, 255, 255);</string>
         <rect>
          <x>150</x>
          <y>230</y>
-         <width>141</width>
-         <height>71</height>
+         <width>201</width>
+         <height>31</height>
         </rect>
        </property>
        <property name="text">
@@ -275,8 +275,7 @@ background-color: rgb(255, 255, 255);</string>
         </rect>
        </property>
        <property name="styleSheet">
-        <string notr="true">
-</string>
+        <string notr="true"/>
        </property>
        <property name="text">
         <string>Supprimer</string>
